tests/assembler/fail/missing_label.tal
|0100
    #12 ,missing-label STR
